user signup and profileScreen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.auth.MainActivity"></activity>
-
-        <activity android:name=".ui.auth.LoginActivity">
+        <activity android:name=".views.auth.HomeActivity"></activity>
+        <activity android:name=".views.auth.MainActivity" />
+        <activity android:name=".views.auth.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
