--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     kapt.includeCompileClasspath = false
     defaultConfig {
         applicationId "com.mayakoba.appxone.kotlin_01"
-        minSdkVersion 23
+        minSdkVersion 26
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -74,4 +74,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.1.0-alpha05'
     implementation 'androidx.navigation:navigation-ui-ktx:2.1.0-alpha05'
 
+    implementation "com.xwray:groupie:2.3.0"
+    implementation "com.xwray:groupie-databinding:2.3.0"
+    implementation "com.xwray:groupie-kotlin-android-extensions:2.3.0"
 }
